--- a/package.json
+++ b/package.json
@@ -58,16 +58,18 @@
     "kleur": "^4.1.4",
     "meow": "^9.0.0",
     "mime": "^2.5.2",
-    "prettier": "^2.2.1"
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.1",
     "@types/mime": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/node-fetch": "^2.5.10",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "codecov": "^3.8.2",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
